infra/service-mesh/jaeger-depl.yaml
apiVersion: v1
kind: Service
metadata:
    name: jaeger
spec:
    selector:
        app: jaeger-dash
    ports:
        - port: 5775
          targetPort: 5775
          protocol: UDP
          name: compact-zipkin-thrift
        - port: 6831
          targetPort: 6831
          protocol: UDP
          name: compact-jaeger-thrift
        - port: 6832
          targetPort: 6832
          protocol: UDP
          name: binary-jaeger-thrift
        - port: 5778
          targetPort: 5778
          name: config
        - port: 16686
          targetPort: 16686
          name: dashboard
        - port: 14268
          targetPort: 14268
          name: direct-jaeger-thrift
        - port: 14250
          targetPort: 14250
          name: model-proto
        - port: 9411
          targetPort: 9411
          name: zipkin
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jaeger-dash-depl
    labels:
        app: jaeger-dash
spec:
    replicas: 1
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            name: jaeger-dash
            labels:
                app: jaeger-dash
        spec:
            terminationGracePeriodSeconds: 10
            containers:
                - name: jaeger-dash
                  image: jaegertracing/all-in-one
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: jaeger-dash
