infra/service-mesh/jaeger-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jaeger-ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    # This section needs to be uncommented to use TLS
    tls:
        - hosts:
              - jaeger.acmefast.dev
          secretName: mkcert
        # #########################################
    rules:
        - host: jaeger.acmefast.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: jaeger
                            port:
                                number: 16686
